<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activity.InternalStorageActivity">

    <Button
        android:id="@+id/btn_buat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_buat" />

    <Button
        android:id="@+id/btn_ubah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ubah" />

    <Button
        android:id="@+id/btn_baca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_baca" />

    <Button
        android:id="@+id/btn_hapus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_hapus" />

    <EditText
        android:id="@+id/edtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="Tulis Pesan"
        android:inputType="textMultiLine"
        android:text="@string/edtInput" />
</LinearLayout>